davtro/gr/website-argocd-k8s-githubactions-kustomize-kyverno03/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: davtro-website-service
spec:
  selector:
    app: davtro-website-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
