davtro/gr/website-argocd-k8s-githubactions-kustomize-kyverno03/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: davtro-website-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: davtro-website-service
                port:
                  number: 80
